--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     name: 'spring-aop'
 
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5433/postgres}
+    url: ${DB_URL:jdbc:postgresql://postgres:5432/postgres}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
