feat | Add application initialization in docker-compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,9 @@ services:
       - 'POSTGRES_USER=postgres'
     ports:
       - '5433:5432'
+
+  spring-aop:
+    build: .
+    container_name: spring-aop
+    ports:
+      - '8080:8080'
