feat | Create volume for PostgreSQL in Docker container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,14 @@ services:
       - 'POSTGRES_USER=postgres'
     ports:
       - '5433:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   spring-aop:
     build: .
     container_name: spring-aop
     ports:
       - '8080:8080'
+
+volumes:
+  postgres_data:
